fixed small spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,12 @@ html {
 	min-height: 100vh;
 }
 
+main {
+	width: 100%;
+}
+
 section {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
